# requests_fixer

./: README.md  pyproject.toml
src/requests_fixer/: __init__.py  patch.py
tests/: __init__.py
