[project]
name = "requests_fixer"
version = "0.1.0"
description = "FIX your requests"
authors = [
    {name = "yzqzss", email = "yzqzss@yandex.com"},
]
dependencies = ["requests==2.*"]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
